--- a/components/01-atoms/forms/_select-element.twig
+++ b/components/01-atoms/forms/_select-element.twig
@@ -10,7 +10,8 @@
  * @see template_preprocess_select()
  */
 #}
-{% spaceless %}
+
+{% apply spaceless %}
   <select{{ attributes.addClass('max-w-lg mt-1 shadow-sm focus:ring-primary-500 focus:border-primary-500 block w-full sm:text-sm border-gray-300 rounded-md') }}>
     {% for option in options %}
       {% if option.type == 'optgroup' %}
@@ -24,4 +25,4 @@
       {% endif %}
     {% endfor %}
   </select>
-{% endspaceless %}
+{% endapply %}
